--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VIET NAM TO YOU TOURISM COMPANY LIMITED - Contact</title>
-    <link rel="icon" type="image/png" href="images/VN TO YOU LOGO.png">
+    <title>VIET NAM TO YOU TOURISM COMPANY LIMITED - Kontak</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="popup/popup.css">
@@ -18,10 +17,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Introduction</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tour.html">Tour</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Perkenalan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tour.html">Tur</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Kontak</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">Berita</a></li>
                 </ul>
             </div>
         </div>
@@ -29,8 +28,8 @@
 
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
-            <h1>Contact Us</h1>
-            <p>We are always ready to support and advise on all your travel needs.</p>
+            <h1>Hubungi Kami</h1>
+            <p>Kami selalu siap mendukung dan memberikan saran untuk semua kebutuhan perjalanan Anda.</p>
         </div>
     </header>
 
@@ -38,17 +37,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Contact Information</h3>
+                    <h3>Informasi Kontak</h3>
                     <p><strong>VIET NAM TO YOU TOURISM COMPANY LIMITED</strong></p>
-                    <p>Address: No. 5TT1 Alley 537 Bat Khoi Str, Long Bien Dist, Hanoi, Vietnam</p>
+                    <p>Alamat: No. 5TT1 Gang 537 Jl. Bat Khoi, Distrik Long Bien, Hanoi, Vietnam</p>
                     <p>Email: SALES@VNTOYOU.NET</p>
                     <p>Hotline: +84 904 596 505 (Ms. Ngan) / +84 977 632 673 (Mr. Thong) / +84 93 461 55 95 (Ms. Ruby)</p>
                 </div>
                 <div class="col-md-6">
-                    <h3>Direct Contact</h3>
-                    <p><a href="mailto:SALES@VNTOYOU.NET" class="btn btn-primary">Send Email</a></p>
-                    <p><a href="tel:+84904596505" class="btn btn-primary">Call Ms. Ngan</a></p>
-                    <p><a href="https://wa.me/84904596505" class="btn btn-success">WhatsApp Ms. Ngan</a></p>
+                    <h3>Kontak Langsung</h3>
+                    <p><a href="mailto:SALES@VNTOYOU.NET" class="btn btn-primary">Kirim Email</a></p>
+                    <p><a href="tel:+84904596505" class="btn btn-primary">Telepon Ms. Ngan</a></p>
+                    <p><a href="https://wa.me/84904596505" class="btn btn-primary">WhatsApp Ms. Ngan</a></p>
                 </div>
             </div>
         </div>
@@ -58,11 +57,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 VIET NAM TO YOU TOURISM COMPANY LIMITED. All rights reserved.</p>
+                    <p>&copy; 2025 VIET NAM TO YOU TOURISM COMPANY LIMITED. Semua hak cipta dilindungi.</p>
                 </div>
                 <div class="col-md-6">
                     <div class="contact-footer">
-                        <p class="mb-2"><strong>Contact us:</strong></p>
+                        <p class="mb-2"><strong>Hubungi kami:</strong></p>
                         <p class="mb-1">
                             <a href="mailto:SALES@VNTOYOU.NET" class="text-white text-decoration-none">
                                 📧 Email: SALES@VNTOYOU.NET
