--- a/news.html
+++ b/news.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VIET NAM TO YOU TOURISM COMPANY LIMITED - News</title>
-    <link rel="icon" type="image/png" href="images/VN TO YOU LOGO.png">
+    <title>VIET NAM TO YOU TOURISM COMPANY LIMITED - Berita</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="popup/popup.css">
@@ -18,10 +17,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Introduction</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tour.html">Tours</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Perkenalan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tour.html">Tur</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Kontak</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="news.html">Berita</a></li>
                 </ul>
             </div>
         </div>
@@ -29,8 +28,8 @@
 
     <header class="bg-primary text-white text-center py-5">
         <div class="container">
-            <h1>Latest News</h1>
-            <p>Stay updated with the latest information and travel trends from VIET NAM TO YOU TOURISM COMPANY LIMITED.</p>
+            <h1>Berita Terbaru</h1>
+            <p>Tetap update dengan informasi terbaru dan tren perjalanan dari VIET NAM TO YOU TOURISM COMPANY LIMITED.</p>
         </div>
     </header>
 
@@ -38,20 +37,20 @@
         <div class="container">
             <div class="row mb-4">
                 <div class="col-md-6">
-                    <label for="category" class="form-label">Select Category:</label>
+                    <label for="category" class="form-label">Pilih Kategori:</label>
                     <select class="form-select" id="category">
-                        <option value="all">All</option>
-                        <option value="Tour Mới">New Tours</option>
-                        <option value="Khuyến Mãi">Promotions</option>
-                        <option value="Sự Kiện">Events</option>
-                        <option value="Xu Hướng">Trends</option>
+                        <option value="all">Semua</option>
+                        <option value="Tour Mới">Tur Baru</option>
+                        <option value="Khuyến Mãi">Promosi</option>
+                        <option value="Sự Kiện">Acara</option>
+                        <option value="Xu Hướng">Tren</option>
                     </select>
                 </div>
                 <div class="col-md-6">
-                    <label for="sort" class="form-label">Sort:</label>
+                    <label for="sort" class="form-label">Urutkan:</label>
                     <select class="form-select" id="sort">
-                        <option value="newest">Newest</option>
-                        <option value="oldest">Oldest</option>
+                        <option value="newest">Terbaru</option>
+                        <option value="oldest">Terlama</option>
                     </select>
                 </div>
             </div>
@@ -65,14 +64,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 VIET NAM TO YOU TOURISM COMPANY LIMITED. All rights reserved.</p>
+                    <p>&copy; 2025 VIET NAM TO YOU TOURISM COMPANY LIMITED. Semua hak cipta dilindungi.</p>
                 </div>
                 <div class="col-md-6">
                     <div class="contact-footer">
-                        <p class="mb-2"><strong>Contact us:</strong></p>
+                        <p class="mb-2"><strong>Hubungi kami:</strong></p>
                         <p class="mb-1">
                             <i class="fas fa-map-marker-alt me-2"></i>
-                            Address: No. 5TT1 Alley 537 Bat Khoi Str, Long Bien Dist, Hanoi, Vietnam
+                            Alamat: No. 5TT1 Gang 537 Jl. Bat Khoi, Distrik Long Bien, Hanoi, Vietnam
                         </p>
                         <p class="mb-1">
                             <a href="mailto:SALES@VNTOYOU.NET" class="text-white text-decoration-none">
@@ -112,10 +111,10 @@
                 allNews = await response.json();
                 displayNews(allNews);
             } catch (error) {
-                console.error('Lỗi load tin tức:', error);
+                console.error('Error saat memuat berita:', error);
                 const newsList = document.getElementById('news-list');
                 if (newsList) {
-                    newsList.innerHTML = '<div class="col-12"><div class="alert alert-danger">Không thể tải tin tức. Vui lòng thử lại sau.</div></div>';
+                    newsList.innerHTML = '<div class="col-12"><div class="alert alert-danger">Tidak dapat memuat berita. Silakan coba lagi nanti.</div></div>';
                 }
             }
         }
@@ -128,7 +127,7 @@
                 day: 'numeric',
                 timeZone: 'Asia/Ho_Chi_Minh'
             };
-            return new Date(dateString).toLocaleDateString('vi-VN', options);
+            return new Date(dateString).toLocaleDateString('id-ID', options);
         }
 
         // Hiển thị tin tức
@@ -137,7 +136,7 @@
             newsContainer.innerHTML = '';
 
             if (newsList.length === 0) {
-                newsContainer.innerHTML = '<div class="col-12"><div class="alert alert-info">No news available.</div></div>';
+                newsContainer.innerHTML = '<div class="col-12"><div class="alert alert-info">Tidak ada berita tersedia.</div></div>';
                 return;
             }
 
@@ -145,7 +144,7 @@
                 const newsCard = `
                     <div class="col-md-4 mb-4" data-category="${news.category}" data-date="${news.date}">
                         <div class="card h-100">
-                            <img src="${news.image}" class="card-img-top" alt="${news.title}" onerror="this.src='https://via.placeholder.com/300x200?text=Tin+Tức'" style="height: 200px; object-fit: cover;">
+                            <img src="${news.image}" class="card-img-top" alt="${news.title}" onerror="this.src='https://via.placeholder.com/300x200?text=Berita'" style="height: 200px; object-fit: cover;">
                             <div class="card-body d-flex flex-column">
                                 <div class="mb-2">
                                     <span class="badge bg-primary">${news.category}</span>
@@ -153,9 +152,9 @@
                                 <h5 class="card-title">${news.title}</h5>
                                 <p class="card-text flex-grow-1">${news.summary}</p>
                                 <div class="mt-auto">
-                                    <small class="text-muted">Date: ${formatDate(news.date)}</small>
+                                    <small class="text-muted">Tanggal: ${formatDate(news.date)}</small>
                                     <div class="mt-2">
-                                        <a href="news/details/news-detail.html?id=${news.id}" class="btn btn-primary">Read More</a>
+                                        <a href="news/details/news-detail.html?id=${news.id}" class="btn btn-primary">Baca Selengkapnya</a>
                                     </div>
                                 </div>
                             </div>
@@ -184,9 +183,9 @@
                 const dateB = new Date(b.date);
                 
                 if (sortFilter === 'newest') {
-                    return dateB - dateA; // Mới nhất trước
+                    return dateB - dateA; // Terbaru dahulu
                 } else {
-                    return dateA - dateB; // Cũ nhất trước
+                    return dateA - dateB; // Terlama dahulu
                 }
             });
 
