Fix button centering on mobile using flexbox container - final solution

--- a/index.html
+++ b/index.html
@@ -236,8 +236,10 @@
                                         <h5 class="text-primary mb-3">Layanan Kami</h5>
                                         <p class="mb-4">${sanitizeHTML(about.services)}</p>
                                         <div class="text-center">
-                                            <a href="tour.html" class="btn btn-primary btn-lg me-2 mb-2">Jelajahi Tur Kami</a>
-                                            <a href="contact.html" class="btn btn-primary btn-lg mb-2">Hubungi Kami Hari Ini</a>
+                                            <div class="button-group mx-auto">
+                                                <a href="tour.html" class="btn btn-primary btn-lg mb-2">Jelajahi Tur Kami</a>
+                                                <a href="contact.html" class="btn btn-primary btn-lg mb-2">Hubungi Kami Hari Ini</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
